# memclave-ci-switch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
misc/: reset.S
